apps/base/kube-prometheus/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: k8s
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
  name: prometheus-ingress
  namespace: monitoring
spec:
  # ingressClassName: nginx
  rules:
    - host: prometheus02.kontur.io
      http:
        paths:
          - backend:
              service:
                name: prometheus-k8s
                port:
                  name: web
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - prometheus02.kontur.io
      secretName: prometheus02-kontur-io-tls
